# engineering-ui-kit

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  requirements-dev.txt
examples/capabilities-python-reference/: README.md  conftest.py  pyproject.toml
examples/capabilities-python-reference/src/capabilities_python_reference/: __init__.py  cli_app.py  composition_root.py  http_app.py  scheduled_app.py
examples/capabilities-python-reference/src/capabilities_python_reference/domain/: __init__.py  catalog.py  order_store.py  place_order.py  schemas.py
examples/capabilities-python-reference/tests/: test_cli_e2e.py  test_composition_root.py  test_http_e2e.py  test_schedule_e2e.py
examples/capabilities-react-python-reference/: .gitignore  README.md  conftest.py  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
examples/capabilities-react-python-reference/fixtures/: canonical-accept.json  canonical-reject-domain-unknown-sku.json  canonical-reject-malformed.json
examples/capabilities-react-python-reference/src/capabilities_react_python_reference/: composition_root.py  http_app.py
examples/capabilities-react-python-reference/src/capabilities_react_python_reference/domain/: catalog.py  place_order.py  schemas.py
examples/capabilities-react-python-reference/src/client/: composition-root.ts  http-transport.ts  place-order-schema.ts  types.ts
examples/capabilities-react-python-reference/src/generation/: contract.ts  generate-openapi.ts
examples/capabilities-react-python-reference/src/react/: PlaceOrderForm.tsx
examples/capabilities-react-python-reference/tests/: cap-test-066-react-calls-live-python.test.tsx  cap-test-069-cross-language-parity.test.ts  test_http_e2e.py
examples/capabilities-react-python-reference/tests/support/: python-server.ts
runtimes/python/: README.md  conftest.py  pyproject.toml
runtimes/python/src/engineering_ui_capabilities_runtime/: __init__.py
runtimes/python/src/engineering_ui_capabilities_runtime/adapters/: __init__.py  filesystem.py  http_client.py  persistence.py  process.py
runtimes/python/src/engineering_ui_capabilities_runtime/cli/: __init__.py  host.py  mapping.py  signals.py
runtimes/python/src/engineering_ui_capabilities_runtime/core/: __init__.py  cancellation.py  clock.py  config.py  context.py  correlation.py  deadline.py  dispatch.py  errors.py  lifecycle.py  outcomes.py  secrets.py  telemetry_protocols.py
runtimes/python/tests/: test_adapters_filesystem.py  test_adapters_http_client.py  test_adapters_persistence.py  test_adapters_process.py  test_cancellation_and_deadline.py  test_cli_host.py  test_cross_cutting_hosts.py  test_dispatch.py  test_http_host.py  test_lifecycle.py  test_outcomes.py  test_secrets_canary.py  test_validation_fixtures.py  test_worker_cron.py  test_worker_scheduler.py
(+568 files in other folders)
