[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capabilities-react-python-reference"
version = "0.1.0"
description = "Runnable Python host for the React/TypeScript <-> Python OpenAPI cross-language slice (CAP-ERA-001 WP4B-react-python)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
dependencies = [
    "engineering-ui-capabilities-runtime",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
