[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-ui-capabilities-runtime"
version = "0.1.0"
description = "Framework-neutral Python runtime core for Engineering UI Kit Capabilities (CAP-ERA-001)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
dependencies = [
    "pydantic>=2",
    "jsonschema>=4",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
